Removed depcreated Integer boxing